--- a/index.html
+++ b/index.html
@@ -2816,7 +2816,7 @@ border-radius: 0px;
 
 
 
-<script type="text/javascript" src="./People Analytics_files/MathJax.js.download"></script><style type="text/css">
+<script type="text/javascript" src="./index_files/MathJax.js.download"></script><style type="text/css">
                         .zhmMask{
                             z-index:999999999;
                             background-color:#000;
